--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 <body>
     <div id="app">
-        <h1>Product goes here</h1>
+        <h1>{{product}}</h1>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+    <script>const mountApp = app.mount('#app')</script>
 </body>
 
 </html>
