--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body>
     <div id="app">
+                <div class="nav-bar"></div>
+                <div class="product-display">
+                    <div class="product-container">
+                        <div class="product-image">
+                            <img :src="image" />
+                        </div>
+                    </div>
+                </div>
         <h1>{{product}}</h1>
     </div>
 
