--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </div>
                 </div>
             </div>
-        <h1>{{product}}</h1>
+        <h1>{{title}}</h1>
         <p v-if="inventory > 10">
             <!-- v-show : toggle elements에 사용 -->
             <!-- v-if 와 v-eles를 꼭 같이 쓸 필요는 없음 -->
@@ -30,7 +30,7 @@
         <ul>
             <li v-for="detail in details">{{detail}}</li>
         </ul>
-        <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)" class="color-circle"
+        <div v-for="(variant, index) in variants" :key="variant.id" @mouseover="updateVariant(index)" class="color-circle"
             :style="{ backgroundColor: variant.color }">
         </div>
         <button class="button" :class="{disabledButton: !inStock}" :disabled="!inStock" @click="addToCart">
