--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 				@add-to-cart="updateCart"
 			></product-display>
 		</div>
-		<!-- Import Js -->
 	</body>
+	<!-- Import Js -->
 	<script src="./main.js"></script>
 	<script src="./components/ProductDisplay.js"></script>
 	<script src="./components/ProductDetails.js"></script>
+	<script src="./components/ReviewForm.js"></script>
+	<script src="./components/ReviewList.js"></script>
 
 	<script>
 		const mountApp = app.mount('#app');
